@@ -32,6 +32,9 @@ Command to execute on the remote shells. This starts \fIgsh\fR in non\-interacti
 \fB\-\-ssh=SSH\fR
 Ssh command to use [ssh]. By default, \fIgsh\fR spawns remote shells using the ssh command, but another shell command can be specified here. For example, with \-\-ssh='usleep $((RANDOM*50)); exec ssh' a delay will be introduced to avoid all hosts accessing a NFS server at the same time. If the hostname should not be added at the end of the command, the macro %(host)s can be inserted where the hostname should be placed. Also, make sure the command you use launchs a pty, this may need the \-t option for ssh.
 .TP 
+\fB\-\-log\-file=LOG_FILE\fR
+File to log each machine conversation [none]. If specified, \fIgsh\fR will log all executed commands and their output in the file. The logging destination can be dynamically changed with the :log_output control command.
+.TP 
 \fB\-\-abort\-errors\fR
 Abort if some shell fails to initialize [ignore]. By default, \fIgsh\fR just logs an error when it cannot succesfully open a remote shell. With this option, it exits with a failure.
 .TP 
@@ -64,6 +67,9 @@ Do not echo the next typed line. This is useful when entering password. If debug
 .TP 
 \fB:list [SHELLS...]\fR
 List remote shells and their states. The special characters * ? and [] work as expected.
+.TP 
+\fB:log_output [PATH]\fR
+Duplicate every console output into the given local file. If PATH is not given, restore the default behaviour of not logging the output.
 .TP 
 \fB:purge [SHELLS...]\fR
 Delete disabled remote shells. This helps to have a shorter list. The special characters * ? and [] work as expected.
